Agrega formulario de contacto en contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1>Contacto</h1>
-    
+    <form action="/config.dev.js">
+        <label for="nombre-completo">Nombre completo:</label>
+        <input id="nombre-completo" name="nombre-completo">
+
+        <label for="consulta">Consulta:</label>
+        <textarea name="consulta" id="consulta"></textarea>
+        
+        <button type="submit">Consultar</button>
+    </form>
 </body>
 </html>
