--- a/servicios.html
+++ b/servicios.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Los mejores servicios">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
 </head>
